bdr.BDR.scala.error
Compilation error:
BDR:2: error: type mismatch;
 found   : Char(' ')
 required: String
var cell: String = ' ';
                   ^