bdr.BDR.scala.code
var arret: Boolean = false;
var cell: String = ' ';


do{
  
  cell=readMessage()
  
  
  
  
  
}while(!arret)